--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
           <br><br>
 
           <h2 class="title is-3 publication-title has-text-centered">Gallery</h2>          <div id="hero-list">
-            <div id="tree">
+            <!-- <div id="tree">
               <video id="replay-video" autoplay muted loop playsinline>
                 <source src="./assets/videos/teaser_cut/bullcomposite.mp4" type="video/mp4">
               </video>
               <small>"A 3D model of a bulldozer made out of toy bricks"</small>
-            </div>
+            </div> -->
           </div>
           <div id="hero-list">
             <div id="tree">
